src/core-crm/objects/Case/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>