src/core-crm/objects/Case/fields/Add_to_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Campaign for the enquiry.</description>
    <label>Add to Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>