src/core-crm/objects/Case/fields/Auto_Priority_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Priority_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To enable the automated priority calculation on case creation</description>
    <label>Auto-Priority Assignment</label>
    <type>Checkbox</type>
</CustomField>