src/core-crm/objects/Case/fields/Awaiting_Response_From__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Response_From__c</fullName>
    <description>Used to track the progress within the status</description>
    <label>Awaiting Response From</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>International Admissions</fullName>
            </value>
            <value>
                <fullName>International Office</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Other QUT Department</fullName>
            </value>
            <value>
                <fullName>Enquirer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>