src/core-crm/objects/Case/fields/Call_Issue__c.field-meta.xml
<CustomField>
    <fullName>Call_Issue__c</fullName>
    <description>This field is designated for storing content generated by the AI, specifically addressing the Resolution described in the call.</description>
    <label>Call Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>