src/core-crm/objects/Case/fields/Call_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Call_Resolution__c</fullName>
    <description>This field is designated for storing content generated by the AI, specifically addressing the issue described in the call.</description>
    <label>Call Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>