src/core-crm/objects/Case/fields/Call_Summary__c.field-meta.xml
<CustomField>
    <fullName>Call_Summary__c</fullName>
    <description>This field is designated for storing content generated by the AI, specifically addressing the summary of the call.</description>
    <label>Call Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>