src/core-crm/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>The classification of the case based on business processes.</description>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic Future Student Enquiry</fullName>
            </value>
            <value>
                <fullName>International Future Student Enquiry</fullName>
            </value>
            <value>
                <fullName>Student Success - Retention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>