src/core-crm/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>The type of Case being tracked.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Student_LifeCycle_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acceptance process</fullName>
            </value>
            <value>
                <fullName>Agent matters</fullName>
            </value>
            <value>
                <fullName>Application process</fullName>
            </value>
            <value>
                <fullName>Application status</fullName>
            </value>
            <value>
                <fullName>Change application</fullName>
            </value>
            <value>
                <fullName>Compliance documentation</fullName>
            </value>
            <value>
                <fullName>Course information</fullName>
            </value>
            <value>
                <fullName>Enrolment</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Orientation and onboarding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Progression</fullName>
            </value>
            <value>
                <fullName>Scholarships</fullName>
            </value>
            <value>
                <fullName>Student life</fullName>
            </value>
            <value>
                <fullName>Technical issues</fullName>
            </value>
            <value>
                <fullName>Why QUT</fullName>
            </value>
            <value>
                <fullName>School Code of Conduct</fullName>
                <isActive>false</isActive>
                <label>School Code of Conduct</label>
            </value>
            <value>
                <fullName>School Violation</fullName>
                <isActive>false</isActive>
                <label>School Violation</label>
            </value>
            <value>
                <fullName>State Offense</fullName>
                <isActive>false</isActive>
                <label>State Offense</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>