src/core-crm/objects/Case/fields/Chat_Issue__c.field-meta.xml
<CustomField>
    <fullName>Chat_Issue__c</fullName>
    <description>This field is designated for storing content generated by the AI, specifically addressing the issue described in the chat conversation.</description>
    <label>Chat Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>