src/core-crm/objects/Case/fields/Chat_Summary__c.field-meta.xml
<CustomField>
    <fullName>Chat_Summary__c</fullName>
    <description>This field is designated for storing content generated by the AI, specifically addressing the summary of the chat conversation.</description>
    <label>Chat Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>