src/core-crm/objects/Case/fields/Citizenship_Country__c.field-meta.xml
<CustomField>
    <fullName>Citizenship_Country__c</fullName>
    <description>The Country of Citizenship of the associated contact/lead on the case</description>
    <formula>IF( NOT( ISBLANK( ContactId ) )  ,  TEXT( Contact.Citizenship_Country__c )  ,  TEXT( Lead__r.Marketing_Segmentation__r.My_Country_Of_Citizenship__c )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Citizenship Country</label>
    <type>Text</type>
</CustomField>