src/core-crm/objects/Case/fields/Closure_Code__c.field-meta.xml
<CustomField>
    <fullName>Closure_Code__c</fullName>
    <description>Specified how a case was closed for reporting purposes.</description>
    <label>Closure Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Response Given</fullName>
            </value>
            <value>
                <fullName>No response given</fullName>
            </value>
            <value>
                <fullName>Redirected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>