src/core-crm/objects/Case/fields/Closure_Details__c.field-meta.xml
<CustomField>
    <fullName>Closure_Details__c</fullName>
    <description>Summarises the case and the resolution for the enquirer.</description>
    <label>Closure Details</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>