src/core-crm/objects/Case/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <description>The code of the unit the student needs support with provided by the referrer</description>
    <label>Course Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>