src/core-crm/objects/Case/fields/Description_Summary__c.field-meta.xml
<CustomField>
    <fullName>Description_Summary__c</fullName>
    <description>This field is used to store the summary of the description</description>
    <label>Description Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>