src/core-crm/objects/Case/fields/Einstein_Recommendation_Applied__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Recommendation_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Einstein Recommendation Applied</label>
    <type>Checkbox</type>
</CustomField>