src/core-crm/objects/Case/fields/Engagement_List_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Engagement_List_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related engagement list configuration that lead to the creation of this case.</description>
    <label>Engagement List Configuration</label>
    <referenceTo>Engagement_List_Configuration__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>