src/core-crm/objects/Case/fields/hed__Occurrence_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Occurrence_Date__c</fullName>
    <description>The date and time when the behavior event that triggered the Case occurred.</description>
    <inlineHelpText>The date and time when the behavior event that triggered the Case occurred.</inlineHelpText>
    <label>Occurrence Date</label>
    <type>DateTime</type>
</CustomField>