src/core-crm/objects/Case/fields/Identified_Issues__c.field-meta.xml
<CustomField>
    <fullName>Identified_Issues__c</fullName>
    <description>Grouping or Classification of issues identified for Outreach</description>
    <label>Identified Issues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Belonging</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Time &amp; Workload Management</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Careers</fullName>
            </value>
            <value>
                <fullName>No Issue / Did Not Disclose</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>