src/core-crm/objects/Case/fields/Initial_Communication_Status__c.field-meta.xml
<CustomField>
    <fullName>Initial_Communication_Status__c</fullName>
    <description>The state of the initial communication sent on case creation</description>
    <label>Initial Communication Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>