src/core-crm/objects/Case/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <type>TextArea</type>
</CustomField>