src/core-crm/objects/Case/fields/Last_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Queue_Name__c</fullName>
    <description>The last assigned  queue name of the Case before it’s assigned to a user</description>
    <inlineHelpText>The last assigned  queue name of the Case before it’s assigned to a user</inlineHelpText>
    <label>Last Queue Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>