src/core-crm/objects/Case/fields/Latest_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Latest_Queue_Name__c</fullName>
    <description>This field always captured the queue name that the case  was last owned by.</description>
    <label>Latest Queue Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>