src/core-crm/objects/Case/fields/Marketing_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Opt_In__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the enquirer has opted in for marketing communications</description>
    <label>Marketing Opt In</label>
    <type>Checkbox</type>
</CustomField>