src/core-crm/objects/Case/fields/My_Citizenship_Status__c.field-meta.xml
<CustomField>
    <fullName>My_Citizenship_Status__c</fullName>
    <description>The citizenship type of the enquirer</description>
    <label>My Citizenship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australian Citizen or Permanent Resident</fullName>
            </value>
            <value>
                <fullName>New Zealand Citizen</fullName>
            </value>
            <value>
                <fullName>International Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>