src/core-crm/objects/Case/fields/My_Country_of_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>My_Country_of_Citizenship__c</fullName>
    <description>The country of citizenship of the enquirer</description>
    <label>My Country of Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>