src/core-crm/objects/Case/fields/My_Country_of_Residency__c.field-meta.xml
<CustomField>
    <fullName>My_Country_of_Residency__c</fullName>
    <description>The country the enquirer currently resides in</description>
    <label>My Country of Residency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>