src/core-crm/objects/Case/fields/My_Primary_Study_Level__c.field-meta.xml
<CustomField>
    <fullName>My_Primary_Study_Level__c</fullName>
    <description>The Study Level the enquirer is enquiring about</description>
    <label>My Primary Study Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Postgraduate</fullName>
            </value>
            <value>
                <fullName>Higher Degree Research</fullName>
            </value>
            <value>
                <fullName>Short Courses and Professional Development</fullName>
            </value>
            <value>
                <fullName>Exchange and Study Abroad (1 or 2 Semesters Only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>