src/core-crm/objects/Case/fields/Next_Action_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Date_Time__c</fullName>
    <description>A date and time set by the user to specify when the next action should take place, e.g., a callback.</description>
    <label>Next Action Date/Time</label>
    <type>DateTime</type>
</CustomField>