src/core-crm/objects/Case/fields/Outreach_Key__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A composite key (Engagement List Configuration ID and Contact ID) to prevent multiple cases being created for an Engagement List Configuration and Contact combination.</description>
    <label>Outreach Key</label>
    <length>56</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>