src/core-crm/objects/Case/fields/Primary_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Method__c</fullName>
    <description>This attribute helps you understand how the enquirer would like to be contacted.</description>
    <label>Primary Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Work Email</fullName>
            </value>
            <value>
                <fullName>QUT Learner Email</fullName>
            </value>
            <value>
                <fullName>QUT Staff Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>WeChat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>