src/core-crm/objects/Case/fields/Qualtrics_Survey__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a related Qualtrics Survey where applicable</description>
    <label>Qualtrics Survey</label>
    <referenceTo>Qualtrics_Survey__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>