src/core-crm/objects/Case/fields/Qualtrics_Survey_In_Progress_URL__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_Survey_In_Progress_URL__c</fullName>
    <description>This is a field based on the In Progress URL on the Qualtrics Survey object to make it accessible to email templates</description>
    <label>Qualtrics Survey In Progress URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>