src/core-crm/objects/Case/fields/Redirected_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Redirected_Case_ID__c</fullName>
    <description>This field is used to show a case number from HEAT or Oracle.</description>
    <externalId>true</externalId>
    <label>Redirected Case ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>