src/core-crm/objects/Case/fields/Related_Case_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Relationship__c</fullName>
    <label>Related Case Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent Child</fullName>
            </value>
            <value>
                <fullName>Clone from Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>