src/core-crm/objects/Case/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>