src/core-crm/objects/Case/fields/Sensitive_Case__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to hide sensitive data that can be included into enquiries eg, Medical Data, Mental Health Information</description>
    <inlineHelpText>This field is used to hide cases from salesforce users that should not access student sensitive information eg, Medical Information</inlineHelpText>
    <label>Sensitive Case</label>
    <type>Checkbox</type>
</CustomField>