src/core-crm/objects/Case/fields/Student_LifeCycle_Status__c.field-meta.xml
<CustomField>
    <fullName>Student_LifeCycle_Status__c</fullName>
    <description>Used to capture the state a lead or contact is in the application process.</description>
    <label>Student LifeCycle Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Acceptance</fullName>
            </value>
            <value>
                <fullName>Current Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>